--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
   "version": "0.0.0",
   "description": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build:core": "npm run build --workspace=@diucsealumni/core",
+    "build:utils": "npm run build --workspace=@diucsealumni/tils",
+    "build:packages": "npm run build:core && npm run build:utils",
+    "build:app": "npm run build --workspace=example-app",
+    "build:all": "npm run build:packages && npm run build:app"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.4",
