--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -24,5 +24,8 @@ jobs:
       - name: Install Dependencies
         run: npm ci
 
+      - name: Check if rollup is installed
+        run: npm list rollup
+
       - name: Build packages
         run: npm run build:packages
