--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -22,10 +22,7 @@ jobs:
           cache: 'npm'
 
       - name: Install Dependencies
-        run: npm ci
-
-      - name: Check if rollup is installed
-        run: npm list rollup
+        run: rm -rf node_modules package-lock.json && npm install
 
       - name: Build packages
         run: npm run build:packages
