--- a/.github/workflows/release-beta-version.yml
+++ b/.github/workflows/release-beta-version.yml
@@ -34,6 +34,8 @@ jobs:
           git config user.email "github-actions@github.com"
           git tag $TAG_NAME
           git push origin $TAG_NAME
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Create GitHub Release
         uses: actions/create-release@v1
