--- a/.github/workflows/release-beta-version.yml
+++ b/.github/workflows/release-beta-version.yml
@@ -12,18 +12,8 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
         with:
-          node-version: '20'
-          cache: 'npm'
-
-      - name: Install Dependencies
-        run: rm -rf node_modules package-lock.json && npm install
-
-      - name: Build packages
-        run: npm run build:packages
+          token: ${{ secrets.PAT }}
 
       - name: Create Tag
         id: create_tag
@@ -32,8 +22,6 @@ jobs:
           echo "TAG_NAME=$TAG_NAME" >> $GITHUB_ENV
           git tag $TAG_NAME
           git push origin $TAG_NAME
-        env:
-          GITHUB_TOKEN: ${{ secrets.PAT }}
 
       - name: Create GitHub Release
         uses: actions/create-release@v1
