--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,29 +12,18 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
         with:
-          node-version: '20'
-          cache: 'npm'
-
-      - name: Install Dependencies
-        run: rm -rf node_modules package-lock.json && npm install
-
-      - name: Build packages
-        run: npm run build:packages
+          token: ${{ secrets.PAT }}
 
       - name: Create Tag
         id: create_tag
         run: |
           TAG_NAME=$(date +'%Y.%m.%d.%3N')
           echo "TAG_NAME=$TAG_NAME" >> $GITHUB_ENV
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
           git tag $TAG_NAME
-          git remote set-url origin https://x-access-token:${{ secrets.PAT }}@github.com/Softanglez-Coder/diucse-alumni-adk.git
           git push origin $TAG_NAME
-        env:
-          GITHUB_TOKEN: ${{ secrets.PAT }}
 
       - name: Get Previous Tag
         id: prev_tag
@@ -60,4 +49,4 @@ jobs:
           prerelease: false
           body: ${{ steps.release_notes.outputs.result }}
         env:
-          GITHUB_TOKEN: ${{ secrets.PAT }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
