--- a/.github/workflows/release-alpha-version.yml
+++ b/.github/workflows/release-alpha-version.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Create Tag
         id: create_tag
         run: |
-          TAG_NAME=$(date +'%Y.%m.%d.%3N-alpha')
+          TAG_NAME=$(date +'%Y.%m.%d.%H.%M.%S.%4N-alpha')
           echo "TAG_NAME=$TAG_NAME" >> $GITHUB_ENV
           git tag $TAG_NAME
           git push origin $TAG_NAME
