--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Create Tag
         id: create_tag
         run: |
-          TAG_NAME=$(date +'%Y.%m.%d.%3N')
+          TAG_NAME=$(date +'%Y.%m.%d.%H.%M.%S.%4N')
           echo "TAG_NAME=$TAG_NAME" >> $GITHUB_ENV
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
