--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,10 @@
-name: Release New Version of Packages
+name: Release packages
 
 on:
-  push:
+  pull_request:
     branches:
       - main
+      - dev
 
 jobs:
   build:
@@ -12,41 +13,21 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
         with:
-          token: ${{ secrets.PAT }}
+          node-version: '20'
+          cache: 'npm'
 
-      - name: Create Tag
-        id: create_tag
-        run: |
-          TAG_NAME=$(date +'%Y.%m.%d.%H.%M.%S.%4N')
-          echo "TAG_NAME=$TAG_NAME" >> $GITHUB_ENV
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
-          git tag $TAG_NAME
-          git push origin $TAG_NAME
+      - name: Install Dependencies
+        run: rm -rf node_modules package-lock.json && npm install
 
-      - name: Get Previous Tag
-        id: prev_tag
-        run: echo "PREV_TAG=$(git describe --tags --abbrev=0 HEAD^)" >> $GITHUB_ENV
+      - name: Build packages
+        run: npm run build:packages
 
-      - name: Generate Release Notes
-        id: release_notes
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const { execSync } = require('child_process');
-            const prevTag = process.env.PREV_TAG;
-            const currentTag = process.env.TAG_NAME;
-            const commitMessages = execSync(`git log ${prevTag}..${currentTag} --pretty=format:'%s'`).toString();
-            return commitMessages;
-
-      - name: Create GitHub Release
-        uses: actions/create-release@v1
-        with:
-          tag_name: ${{ env.TAG_NAME }}
-          release_name: ${{ env.TAG_NAME }}
-          draft: false
-          prerelease: false
-          body: ${{ steps.release_notes.outputs.result }}
+      - name: Run Semantic Release
         env:
           GITHUB_TOKEN: ${{ secrets.PAT }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: npx semantic-release
