--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "build:all": "npm run build:packages && npm run build:app"
   },
   "devDependencies": {
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
     "@vitejs/plugin-react": "^4.3.4",
     "typescript": "^5.2.0",
     "vite": "^5.0.0",
-    "vite-plugin-dts": "^4.5.3"
+    "vite-plugin-dts": "^4.5.3",
+    "vite-plugin-static-copy": "^2.3.0"
   },
   "keywords": [],
   "author": "",
