--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -7,10 +7,7 @@
   "scripts": {
     "build": "vite build"
   },
-  "peerDependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
-  },
+  "peerDependencies": {},
   "devDependencies": {
     "typescript": "^5.2.0",
     "vite": "^5.0.0"
