--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@diucsealumni/core",
+  "private": false,
   "version": "0.0.0",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
