fix: update pull request triggers to only include main branch and enhance Discord release notification message

--- a/.github/workflows/notify-on-pull-request.yml
+++ b/.github/workflows/notify-on-pull-request.yml
@@ -2,6 +2,8 @@ name: Notify Discord on Pull Request Events
 
 on:
   pull_request:
+    branches:
+      - main
     types: [opened, review_requested, closed]
 
 jobs:
