--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,7 +35,7 @@ jobs:
         run: npx semantic-release
 
       - name: Send notification to Discord
-        if: success()
+        if: ${{ success() && github.ref == 'refs/heads/main' }}
         env:
           DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL_GENERAL }}
         run: |
