--- a/.github/workflows/notify-on-pull-request.yml
+++ b/.github/workflows/notify-on-pull-request.yml
@@ -11,21 +11,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+
       - name: Assign team to review pull request
-        uses: actions/github-script@v7
-        with:
-          github-token: ${{ secrets.PAT }}
-          script: |
-            const team = 'diucse-alumni-developers';
-            const teamMembers = await github.teams.listMembersInOrg({ org: 'Softanglez-Coder', team_slug: team });
-            const teamMemberUsernames = teamMembers.data.map(member => member.login);
-            const teamMemberUsernamesString = teamMemberUsernames.join(' ');
-            github.pulls.requestReviewers({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              pull_number: context.payload.pull_request.number,
-              reviewers: teamMemberUsernamesString.split(' ')
-            });
+        run: gh pr review --add-team Softanglez-Coder/diucse-alumni-developers --repo ${{ github.repository }} ${{ github.event.pull_request.number }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.PAT }}
 
       - name: Send notification to Discord
         env:
