--- a/.github/workflows/notify-on-pull-request.yml
+++ b/.github/workflows/notify-on-pull-request.yml
@@ -4,7 +4,7 @@ on:
   pull_request:
     branches:
       - main
-    types: [opened, review_requested, closed]
+    types: [opened, ready_for_review, closed]
 
 jobs:
   notify:
