--- a/.github/workflows/notify-on-pull-request.yml
+++ b/.github/workflows/notify-on-pull-request.yml
@@ -14,6 +14,11 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
+      - name: Add reviewers
+        run: gh pr edit --add-reviewer Softanglez-Coder/diucse-alumni-developers ${{ github.event.number }}
+        env:
+          GIT_TOKEN: ${{ secrets.PAT }}
+
       - name: Send notification to Discord
         env:
           DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL_CODE_REVIEW }}
