--- a/packages/utils/tsconfig.json
+++ b/packages/utils/tsconfig.json
@@ -1,8 +1,8 @@
 {
+  "extends": [
+    "../../tsconfig.json"
+  ],
   "compilerOptions": {
-    "moduleResolution": "bundler",
-    "paths": {
-      "@diucsealumni/utils/*": ["./src/*"]
-    }
+    "moduleResolution": "bundler"
   }
 }
