--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,43 +1,74 @@
-name: Release packages
+name: Release
 
 on:
   push:
     branches:
       - main
-      - dev
+      - master
+  pull_request:
+    types:
+      - closed
 
 jobs:
-  build:
+  release:
     runs-on: ubuntu-latest
-
+    if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.pull_request.merged == true)
+    
     steps:
-      - name: Checkout Repository
+      - name: Checkout
         uses: actions/checkout@v4
         with:
-          token: '${{ secrets.PAT }}'
+          fetch-depth: 0
+          token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Set up Node.js
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'
+          registry-url: 'https://registry.npmjs.org'
 
-      - name: Install Dependencies
-        run: rm -rf node_modules package-lock.json && npm install
+      - name: Install dependencies
+        run: npm ci
 
-      - name: Build packages
-        run: npm run build:packages
+      - name: Build all packages
+        run: npm run build:all
 
-      - name: Run Semantic Release
+      - name: Release Core Package
         env:
-          GITHUB_TOKEN: ${{ secrets.PAT }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: npx semantic-release
+        working-directory: ./projects/diucsealumni/core
+
+      - name: Release Models Package
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: npx semantic-release
+        working-directory: ./projects/diucsealumni/models
+
+      - name: Release Services Package
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: npx semantic-release
+        working-directory: ./projects/diucsealumni/services
+
+      - name: Release Utils Package
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: npx semantic-release
+        working-directory: ./projects/diucsealumni/utils
 
       - name: Send notification to Discord
         if: ${{ success() && github.ref == 'refs/heads/main' }}
         env:
           DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL_GENERAL }}
         run: |
-          MESSAGE="A new release has been published: ${{ github.event.repository.html_url }}/releases/latest"
+          MESSAGE="New package releases have been published: ${{ github.event.repository.html_url }}/releases/latest"
           curl -H "Content-Type: application/json" -d "{\"content\": \"$MESSAGE\"}" $DISCORD_WEBHOOK_URL
