--- a/package.json
+++ b/package.json
@@ -1,143 +1,46 @@
 {
   "name": "diucse-alumni-adk",
-  "private": false,
-  "workspaces": [
-    "packages/*",
-    "example-app"
-  ],
-  "version": "1.2.0",
-  "description": "",
+  "version": "0.0.0",
   "scripts": {
-    "build:core": "npm run build --workspace=@diucsealumni/core",
-    "build:utils": "npm run build --workspace=@diucsealumni/utils",
-    "build:services": "npm run build --workspace=@diucsealumni/services",
-    "build:packages": "npm run build:core && npm run build:utils && npm run build:services",
-    "build:app": "npm run build --workspace=example-app",
-    "build:all": "npm run build:packages && npm run build:app"
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "build:all": "ng build @diucsealumni/core && ng build @diucsealumni/models && ng build @diucsealumni/services && ng build @diucsealumni/utils",
+    "watch": "ng build --watch --configuration development",
+    "test": "ng test",
+    "semantic-release": "semantic-release",
+    "release:all": "./scripts/release-all.sh"
+  },
+  "private": true,
+  "dependencies": {
+    "@angular/common": "^20.0.0",
+    "@angular/compiler": "^20.0.0",
+    "@angular/core": "^20.0.0",
+    "@angular/forms": "^20.0.0",
+    "@angular/platform-browser": "^20.0.0",
+    "@angular/router": "^20.0.0",
+    "rxjs": "~7.8.0",
+    "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@angular/build": "^20.0.4",
+    "@angular/cli": "^20.0.2",
+    "@angular/compiler-cli": "^20.0.0",
+    "@types/jasmine": "~5.1.0",
+    "jasmine-core": "~5.7.0",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.1.0",
+    "ng-packagr": "^20.0.0",
+    "typescript": "~5.8.2",
+    "semantic-release": "^22.0.0",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
-    "@vitejs/plugin-react": "^4.3.4",
-    "typescript": "^5.2.0",
-    "vite": "^5.0.0",
-    "vite-plugin-dts": "^4.5.3",
-    "vite-plugin-static-copy": "^2.3.0"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "MIT",
-  "release": {
-    "branches": [
-      "main",
-      {
-        "name": "dev",
-        "prerelease": "DEV"
-      }
-    ],
-    "plugins": [
-      [
-        "@semantic-release/commit-analyzer",
-        {
-          "releaseRules": [
-            {
-              "type": "breaking change",
-              "release": "major"
-            },
-            {
-              "type": "feat",
-              "release": "minor"
-            },
-            {
-              "type": "fix",
-              "release": "patch"
-            },
-            {
-              "type": "docs",
-              "release": "patch"
-            },
-            {
-              "type": "style",
-              "release": "patch"
-            },
-            {
-              "type": "refactor",
-              "release": "patch"
-            },
-            {
-              "type": "perf",
-              "release": "patch"
-            },
-            {
-              "type": "test",
-              "release": "patch"
-            },
-            {
-              "type": "build",
-              "release": "patch"
-            },
-            {
-              "type": "ci",
-              "release": "patch"
-            }
-          ]
-        }
-      ],
-      "@semantic-release/release-notes-generator",
-      "@semantic-release/npm",
-      [
-        "@semantic-release/npm",
-        {
-          "pkgRoot": "packages/core",
-          "npmPublish": false
-        }
-      ],
-      [
-        "@semantic-release/npm",
-        {
-          "pkgRoot": "dist/core",
-          "npmPublish": true
-        }
-      ],
-      [
-        "@semantic-release/npm",
-        {
-          "pkgRoot": "packages/utils",
-          "npmPublish": false
-        }
-      ],
-      [
-        "@semantic-release/npm",
-        {
-          "pkgRoot": "dist/utils",
-          "npmPublish": true
-        }
-      ],
-      [
-        "@semantic-release/npm",
-        {
-          "pkgRoot": "packages/services",
-          "npmPublish": false
-        }
-      ],
-      [
-        "@semantic-release/npm",
-        {
-          "pkgRoot": "dist/services",
-          "npmPublish": true
-        }
-      ],
-      [
-        "@semantic-release/git",
-        {
-          "assets": [
-            "CHANGELOG.md",
-            "package.json",
-            "./packages/**/package.json"
-          ]
-        }
-      ],
-      "@semantic-release/github"
-    ]
+    "@semantic-release/github": "^9.2.6",
+    "@semantic-release/npm": "^11.0.2",
+    "@semantic-release/exec": "^6.0.3",
+    "semantic-release-monorepo": "^8.0.2"
   }
 }
