--- a/projects/diucsealumni/services/package.json
+++ b/projects/diucsealumni/services/package.json
@@ -24,7 +24,8 @@
   },
   "peerDependencies": {
     "@angular/common": "^20.0.0",
-    "@angular/core": "^20.0.0"
+    "@angular/core": "^20.0.0",
+    "@diucsealumni/models": "^1.0.0 || ^2.0.0"
   },
   "dependencies": {
     "tslib": "^2.3.0"
