--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,7 +22,7 @@ jobs:
         run: npm ci
 
       - name: Build all libraries
-        run: npm run build --workspaces
+        run: npm run build:all
 
       - name: Run semantic-release
         env:
