--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,30 +32,8 @@ jobs:
       - name: Build all libraries
         run: npm run build:all
 
-      - name: Release Core package
+      - name: Run semantic-release
         env:
           GH_TOKEN: ${{ secrets.PAT }}
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-        working-directory: projects/diucsealumni/core
-        run: npx semantic-release
-
-      - name: Release Models package
-        env:
-          GH_TOKEN: ${{ secrets.PAT }}
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-        working-directory: projects/diucsealumni/models
-        run: npx semantic-release
-
-      - name: Release Services package
-        env:
-          GH_TOKEN: ${{ secrets.PAT }}
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-        working-directory: projects/diucsealumni/services
-        run: npx semantic-release
-
-      - name: Release Utils package
-        env:
-          GH_TOKEN: ${{ secrets.PAT }}
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-        working-directory: projects/diucsealumni/utils
         run: npx semantic-release
