--- a/.releaserc.json
+++ b/.releaserc.json
@@ -3,9 +3,25 @@
     "main",
     "master"
   ],
+  "repositoryUrl": "https://github.com/Softanglez-Coder/diucse-alumni-adk.git",
   "plugins": [
-    "@semantic-release/commit-analyzer",
-    "@semantic-release/release-notes-generator",
+    [
+      "@semantic-release/commit-analyzer",
+      {
+        "releaseRules": [
+          {"type": "feat", "release": "minor"},
+          {"type": "fix", "release": "patch"},
+          {"type": "perf", "release": "patch"},
+          {"breaking": true, "release": "major"}
+        ]
+      }
+    ],
+    [
+      "@semantic-release/release-notes-generator",
+      {
+        "preset": "conventionalcommits"
+      }
+    ],
     [
       "@semantic-release/changelog",
       {
@@ -19,9 +35,9 @@
       }
     ],
     [
-      "@semantic-release/npm",
+      "@semantic-release/exec",
       {
-        "npmPublish": false
+        "publishCmd": "cd dist/diucsealumni/core && npm publish --access public && cd ../models && npm publish --access public && cd ../services && npm publish --access public && cd ../utils && npm publish --access public"
       }
     ],
     [
@@ -31,7 +47,10 @@
           "CHANGELOG.md",
           "package.json",
           "package-lock.json",
-          "projects/*/package.json"
+          "projects/diucsealumni/core/package.json",
+          "projects/diucsealumni/models/package.json",
+          "projects/diucsealumni/services/package.json",
+          "projects/diucsealumni/utils/package.json"
         ],
         "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
       }
