--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,58 +1,117 @@
 {
   "branches": [
-    "main",
-    "master"
+    "main"
   ],
-  "repositoryUrl": "https://github.com/Softanglez-Coder/diucse-alumni-adk.git",
   "plugins": [
     [
       "@semantic-release/commit-analyzer",
       {
         "releaseRules": [
-          {"type": "feat", "release": "minor"},
-          {"type": "fix", "release": "patch"},
-          {"type": "perf", "release": "patch"},
-          {"breaking": true, "release": "major"}
+          {
+            "type": "breaking change",
+            "release": "major"
+          },
+          {
+            "type": "feat",
+            "release": "minor"
+          },
+          {
+            "type": "fix",
+            "release": "patch"
+          },
+          {
+            "type": "docs",
+            "release": "patch"
+          },
+          {
+            "type": "style",
+            "release": "patch"
+          },
+          {
+            "type": "refactor",
+            "release": "patch"
+          },
+          {
+            "type": "perf",
+            "release": "patch"
+          },
+          {
+            "type": "test",
+            "release": "patch"
+          },
+          {
+            "type": "build",
+            "release": "patch"
+          },
+          {
+            "type": "ci",
+            "release": "patch"
+          }
         ]
       }
     ],
+    "@semantic-release/release-notes-generator",
+    "@semantic-release/npm",
     [
-      "@semantic-release/release-notes-generator",
+      "@semantic-release/npm",
       {
-        "preset": "conventionalcommits"
+        "pkgRoot": "projects/diucsealumni/core",
+        "npmPublish": false
       }
     ],
     [
-      "@semantic-release/changelog",
+      "@semantic-release/npm",
       {
-        "changelogFile": "CHANGELOG.md"
+        "pkgRoot": "dist/diucsealumni/core",
+        "npmPublish": true
       }
     ],
     [
-      "@semantic-release/exec",
+      "@semantic-release/npm",
       {
-        "prepareCmd": "npm run build:all"
+        "pkgRoot": "projects/diucsealumni/models",
+        "npmPublish": false
       }
     ],
     [
-      "@semantic-release/exec",
+      "@semantic-release/npm",
       {
-        "publishCmd": "cd dist/diucsealumni/core && npm publish --access public && cd ../models && npm publish --access public && cd ../services && npm publish --access public && cd ../utils && npm publish --access public"
+        "pkgRoot": "dist/diucsealumni/models",
+        "npmPublish": true
+      }
+    ],
+    [
+      "@semantic-release/npm",
+      {
+        "pkgRoot": "projects/diucsealumni/services",
+        "npmPublish": false
+      }
+    ],
+    [
+      "@semantic-release/npm",
+      {
+        "pkgRoot": "dist/diucsealumni/services",
+        "npmPublish": true
+      }
+    ],
+    [
+      "@semantic-release/npm",
+      {
+        "pkgRoot": "projects/diucsealumni/utils",
+        "npmPublish": false
+      }
+    ],
+    [
+      "@semantic-release/npm",
+      {
+        "pkgRoot": "dist/diucsealumni/utils",
+        "npmPublish": true
       }
     ],
     [
       "@semantic-release/git",
       {
-        "assets": [
-          "CHANGELOG.md",
-          "package.json",
-          "package-lock.json",
-          "projects/diucsealumni/core/package.json",
-          "projects/diucsealumni/models/package.json",
-          "projects/diucsealumni/services/package.json",
-          "projects/diucsealumni/utils/package.json"
-        ],
-        "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
+        "assets": ["CHANGELOG.md", "package.json", "./projects/**/package.json"]
       }
     ],
     "@semantic-release/github"
