--- a/.releaserc.json
+++ b/.releaserc.json
@@ -113,6 +113,7 @@
       {
         "assets": [
           "CHANGELOG.md",
+          "LICENSE",
           "package.json",
           "./projects/**/package.json"
         ]
